<resources>
    <string name="app_name">"HelpNet"</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="msg_fill_all_questions">Você precisa responder todas as questões antes de conferir as respostas, existe questões sem respostas, volte e revise as questões</string>
    <string name="msg_category_is_empty">Esta categoria não possui nenhuma questão cadastrada</string>
    <string name="question_number">Questão %s</string>
    <string name="abort_button">Desistir</string>
    <string name="send_button">Enviar</string>
    <string name="cpf_hint">Informe seu CPF</string>
    <string name="close_button">Fechar</string>
    <string name="choose_problem">Selecione o problema</string>
    <string name="description_hint">Informe a descrição do problema</string>
    <string name="more_information_hint">Forneça mais informações</string>
    <string name="search_button">Pesquisar</string>
    <string name="withoutProblem">Nenhum problema foi selecionado, selecione um problema e tente novamente.</string>

</resources>
