<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jns.questoesgp.activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ToolBarStyle" >

            <TextView
                android:id="@+id/tvToobar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:visibility="invisible"
                android:text="Bem vindo Homar "/>


        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:id="@+id/cvIdentify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cvTitle"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:textAlignment="center"
                    android:text="Identificação" />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:textAlignment="center"
                android:gravity="center">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_cpf"
                    android:layout_width="350px"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/text_gray_color">

                    <EditText
                        android:id="@+id/etCpf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:hint="@string/cpf_hint"
                        android:maxLength="11"
                        android:inputType="number"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnSearchCPF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/search_button"
                    android:theme="@style/PrimaryFlatButton"/>

            </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvProblem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:visibility="invisible"
            >
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvProblemDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cvTitle"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:textAlignment="center"
                    android:text="Descrição do problema" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:textColorHint="@color/colorPrimaryDark">

                <com.weiwangcn.betterspinner.library.BetterSpinner
                        android:id="@+id/spProblem"
                        android:layout_width="match_parent"
                        android:layout_margin="20dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/choose_problem" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:textColorHint="@color/text_gray_color">

                    <EditText
                        android:id="@+id/ta_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:hint="@string/more_information_hint"
                        android:lines="6"
                        android:layout_margin="20dp"
                        android:scrollHorizontally="false" />


                </android.support.design.widget.TextInputLayout>



            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>
        <LinearLayout
            android:id="@+id/llAction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingRight="16dp"
            android:visibility="invisible"
            >

            <Button
                android:id="@+id/btnAbort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/abort_button"
                android:theme="@style/SecoundFlatButton"/>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/send_button"
                android:theme="@style/PrimaryFlatButton"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
